--- a/package.json
+++ b/package.json
@@ -9,5 +9,14 @@
   "author": "",
   "license": "ISC",
   "description": "",
-  "type": "module"
+  "type": "module",
+  "dependencies": {
+    "chalk": "^5.3.0",
+    "express": "^4.19.2",
+    "figlet": "^1.7.0",
+    "readline-sync": "^1.4.10"
+  },
+  "devDependencies": {
+    "prettier": "^3.3.3"
+  }
 }
